<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spyfall @ UBI-EN</string>
    <string name="LobbyActivity">Spyfall @ UBI: Lobby</string>
    <string name="RulesFragment">Spyfall @ UBI: Rules</string>
    <string name="UBIFragment">Spyfall @ UBI: UBI</string>
    <string name="WhoAreYouActivity">Spyfall @ UBI: Who are you?</string>
    <string name="ReadyActivity">Spyfall @ UBI: Ready?</string>
    <string name="GameONActivity">Spyfall @ UBI: Game ON!</string>
    <string name="RevealSPYActivity">Spyfall @ UBI: Reveal SPY!</string>
    <string name="RevealLocationActivity">Spyfall @ UBI: Reveal Location!</string>
    <string name="SPYEliminatedActivity">Spyfall @ UBI: Elimination!</string>
    <string name="NONSPIESWinActivity">Spyfall @ UBI: Non-spies win!</string>
    <string name="SPIESWinActivity">Spyfall @ UBI: Spies win!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="DeleteItem1">Are you sure?</string>
    <string name="DeleteItem2">Do you really want to delete this player?</string>
    <string name="YES">Yes!</string>
    <string name="NO">No!</string>
    <string name="GotIt">Got it!</string>
    <string name="NotEnoughtPlayers1">Can\'t proceed!</string>
    <string name="NotEnoughtPlayers2">It is necessary at least 4 players to start the game!</string>
    <string name="Share1">Link to PlayStore:</string>
    <string name="Share2">Share using:</string>
    <string name="GoHome1">Are you sure?</string>
    <string name="GoHome2">Do you want end the current game and go back to the main page?</string>
    <string name="MainFrag1">PLAY</string>
    <string name="MainFrag2">A party game that will help you discover UBI and Covilhã!</string>
    <string name="MainFrag3">How to play?</string>
    <string name="MainFrag4">Take a look at the rules at the side menu!</string>
    <string name="RulesFrag1">Rules</string>
    <string name="RulesFrag2">Game Objectives</string>
    <string name="RulesFrag3">The spy: tries to guess the round\'s location. Infer from others\' questions and answers.</string>
    <string name="RulesFrag4">Other players: figure out who the spy is.</string>
    <string name="RulesFrag5">Players guessing the spy</string>
    <string name="RulesFrag6">Putting up for vote: at any time, a player can try to indict a suspected spy by putting that suspect up for vote.</string>
    <string name="RulesFrag7">The player who receives more votes has to reveal his card. In case of a draw, the game proceeds.</string>
    <string name="RulesFrag8">If the revealed card is a spy card, then that spy is eliminated. If the only spy alive is eliminated, then non-spies win and each one receive 1 point (the player how started the vote receives 1 extra point).</string>
    <string name="RulesFrag9">If the revealed card is a non-spy card, then the spies win and receives 4 points.</string>
    <string name="RulesFrag10">Spy guessing the location</string>
    <string name="RulesFrag11">Spy guesses: at any time, the spy can reveal that they are the spy and make a guess at what the location is. The round immediately ends.</string>
    <string name="RulesFrag12">If the guess is write, then the spies win and receive 4 points. If not, the civilians win and each one receive 1 point.</string>
    <string name="RulesFrag13">Clock runs out</string>
    <string name="RulesFrag14">Players vote on who is a spy and the one who gets more votes has to reveal his card. If everyone get the same amount of votes, then they vote again.</string>
    <string name="UBIFrag1">University of Beira Interior</string>
    <string name="UBIFrag2">UBI is a public university located in the city of Covilhã, in Portugal. In 2021, it had around 8600 students enrolled in the various courses of its training offer, which covers all academic degrees of Portuguese higher education (bachelors, masters and doctorate), as well as postgraduate courses. The university\'s name reflects the historical region where it is located in Portugal, known as the innermost part of the central region of the country, between the districts of Guarda and Castelo Branco.</string>
    <string name="UBIFrag3">UBI is a young, dynamic and constantly developing university. Serving the region, the country and the world is a priority for the Institution through demanding training and research at the highest level, developed in a climate of proximity only possible in medium-sized cities, such as Covilhã.</string>
    <string name="LobbyAct1">PLAYERS</string>
    <string name="LobbyAct2">Player Name</string>
    <string name="LobbyAct3">Play in UBI/Covilhã</string>
    <string name="LobbyAct4">Spies: </string>
    <string name="LobbyAct5">START GAME</string>
    <string name="WhoAreYouAct1">Hide the phone from the others and discover who you are.</string>
    <string name="WhoAreYouAct2">Show me what I am</string>
    <string name="WhoAreYouResAct1">Click the button and pass the phone to the next player.</string>
    <string name="WhoAreYouResAct2">Location card:</string>
    <string name="WhoAreYouResAct3">Spy card:</string>
    <string name="WhoAreYouResAct4">The spy!</string>
    <string name="WhoAreYouResAct5">Figure out who the spy is.</string>
    <string name="WhoAreYouResAct6">Try to guess the rounds location.</string>
    <string name="ReadyAct1">This player starts asking:</string>
    <string name="ReadyAct2">START PLAYING</string>
    <string name="GameONAct1">Forced voting will begin in:</string>
    <string name="GameONAct2">The player that is asking the question should have the phone on his hand!</string>
    <string name="GameONAct3">If you are a civilian:</string>
    <string name="GameONAct4">REVEAL SPY</string>
    <string name="GameONAct5">If you are a spy:</string>
    <string name="GameONAct6">REVEAL PLACE:</string>
    <string name="spy">Spy: </string>
    <string name="spies">Spies: </string>
    <string name="NonSpiesWinAct1">NON-SPIES WIN!</string>
    <string name="lobby">LOBBY</string>
    <string name="RevealLocationAct1">Where are the civilians?</string>
    <string name="RevealLocationAct2">Make your choice:</string>
    <string name="RevealSpyAct1">Make your choice:</string>
    <string name="SpiesWin">SPIES WIN!</string>
    <string name="SpyWin">SPY WIN!</string>
    <string name="points">points</string>
    <string name="SpyEliminatedAct1">Spy eliminated!</string>
    <string name="SpyEliminatedAct2">The spy</string>
    <string name="SpyEliminatedAct3">has been eliminated and can\'t play anymore.</string>
    <string name="SpyEliminatedAct4">KEEP PLAYING</string>
    <string name="nameAlreadyExists">This name already exists! Please choose another one.</string>
    <string name="draw1">Draw on the votes! Vote again!</string>
    <string name="draw2">Draw on the votes! Keep playing!</string>
    <string name="nonSpyRevealLocation">A non-spie tried to reveal the rounds location! Game reset!</string>
    <string name="playing">Playing:</string>
    </resources>