<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RulesFrag1"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_black"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/gameObjectives"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/RulesFrag2"
                android:fontFamily="@font/roboto_black"
                android:textSize="20dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/rules"/>

            <TextView
                android:id="@+id/gameObjectives1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/RulesFrag3"
                android:textAlignment="center"
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/gameObjectives"/>

            <TextView
                android:id="@+id/gameObjectives2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/RulesFrag4"
                android:textAlignment="center"
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/gameObjectives1"/>

            <TextView
                android:id="@+id/playersGuessingTheSpy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/RulesFrag5"
                android:fontFamily="@font/roboto_black"
                android:textAlignment="center"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/gameObjectives2"/>

            <TextView
                android:id="@+id/playersGuessingTheSpy1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/RulesFrag6"
                android:textAlignment="center"
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/playersGuessingTheSpy"/>

            <TextView
                android:id="@+id/playersGuessingTheSpy2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/RulesFrag7"
                android:textAlignment="center"
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/playersGuessingTheSpy1"/>

            <TextView
                android:id="@+id/playersGuessingTheSpy3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/RulesFrag8"
                android:textAlignment="center"
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/playersGuessingTheSpy2"/>

            <TextView
                android:id="@+id/playersGuessingTheSpy4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/RulesFrag9"
                android:textAlignment="center"
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/playersGuessingTheSpy3"/>

            <TextView
                android:id="@+id/spyGuessingTheLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/RulesFrag10"
                android:fontFamily="@font/roboto_black"
                android:textAlignment="center"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/playersGuessingTheSpy4"/>

            <TextView
                android:id="@+id/spyGuessingTheLocation1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/RulesFrag11"
                android:textAlignment="center"
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/spyGuessingTheLocation"/>

            <TextView
                android:id="@+id/spyGuessingTheLocation2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/RulesFrag12"
                android:textAlignment="center"
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/spyGuessingTheLocation1"/>

            <TextView
                android:id="@+id/clockRunsOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/RulesFrag13"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_black"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/spyGuessingTheLocation2"/>

            <TextView
                android:id="@+id/clockRunsOut1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/RulesFrag14"
                android:textAlignment="center"
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/clockRunsOut"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>