<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/UBI1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="UBI"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_black"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/UBI2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/UBIFrag1"
                android:fontFamily="@font/roboto_black"
                android:textSize="20dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/UBI1"/>

            <ImageView
                android:id="@+id/UBIImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ubi"
                android:layout_below="@+id/UBI2"/>

            <TextView
                android:id="@+id/UBI3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/UBIFrag2"
                android:fontFamily="@font/roboto_regular"
                android:textSize="15dp"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/UBIImage"/>

            <TextView
                android:id="@+id/UBI4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/UBIFrag3"
                android:fontFamily="@font/roboto_regular"
                android:textSize="15dp"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/UBI3"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>