<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="169dp"
        android:layout_height="173dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="132dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/spy"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="181dp"
        android:layout_height="44dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="304dp"
        android:drawableStart="@drawable/play_icon"
        android:paddingStart="30dp"
        android:paddingEnd="40dp"
        android:background="@drawable/rounded_corners_buttons"
        android:text="@string/MainFrag1"
        android:textSize="17dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="goToLobby"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:text="Spyfall @ UBI"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_black"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:text="@string/MainFrag2"
        android:textAlignment="center"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="530dp"
        android:text="@string/MainFrag3"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_black"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/takeLook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="560dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:text="@string/MainFrag4"
        android:textAlignment="center"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changePT"
            android:layout_weight="1"
            android:layout_width="170dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/takeLook"
            android:text="PT"
            android:textColor="@color/white"
            android:background="@drawable/rounded_corners_buttons"
            android:layout_marginStart="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
        />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changeENG"
            android:layout_weight="1"
            android:layout_width="170dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/takeLook"
            android:background="@drawable/rounded_corners_buttons"
            android:text="ENG"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/changePT"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>